--- a/app/src/main/res/layout/fragment_case.xml
+++ b/app/src/main/res/layout/fragment_case.xml
@@ -8,22 +8,22 @@
 
     <ImageView
         android:id="@+id/imageViewBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150px"
+        android:layout_height="150px"
         android:src="@drawable/tile_background" />
 
     <TextView
         android:id="@+id/textViewNb"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2"
+        android:text="  2"
         android:textColor="#00963C"
         android:textSize="36sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageViewForeground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150px"
+        android:layout_height="150px"
         android:src="@drawable/tile_foreground" />
 </FrameLayout>
