--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/frameLayout30"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout20"
         app:layout_constraintTop_toBottomOf="@+id/frameLayoutSpacer2">
 
@@ -17,8 +21,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout42"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout31"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout41">
 
@@ -26,8 +32,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout12"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout02"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout11">
 
@@ -35,8 +43,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout23"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout12"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout22">
 
@@ -44,8 +54,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout32"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout22"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout31">
 
@@ -53,8 +65,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout02"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout01">
 
@@ -62,8 +76,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout22"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout11"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout21">
 
@@ -71,8 +87,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout14"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout04"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout13">
 
@@ -80,15 +98,19 @@
 
     <FrameLayout
         android:id="@+id/frameLayout00"
-        android:layout_width="150px"
-        android:layout_height="150px">
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameLayoutSpacer"
-        android:layout_width="150px"
-        android:layout_height="75px"
+        android:layout_width="57.5dp"
+        android:layout_height="31.25dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout00"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -96,8 +118,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout20"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayoutSpacer"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -105,8 +129,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout10"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout00"
         app:layout_constraintTop_toBottomOf="@+id/frameLayoutSpacer">
 
@@ -114,8 +140,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout01"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout00">
 
@@ -123,8 +151,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout21"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout10"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout20">
 
@@ -132,8 +162,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout11"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout01"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout10">
 
@@ -141,8 +173,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayoutSpacer2"
-        android:layout_width="150px"
-        android:layout_height="75px"
+        android:layout_width="57.5dp"
+        android:layout_height="31.25dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout20"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -150,8 +184,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout40"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayoutSpacer2"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -159,8 +195,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout03"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout02">
 
@@ -168,8 +206,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout04"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout03">
 
@@ -177,8 +217,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout13"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout03"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout12">
 
@@ -186,8 +228,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout24"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout13"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout23">
 
@@ -195,8 +239,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout31"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout21"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout30">
 
@@ -204,8 +250,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout33"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout23"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout32">
 
@@ -213,8 +261,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout34"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout24"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout33">
 
@@ -222,8 +272,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout41"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout30"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout40">
 
@@ -231,8 +283,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout43"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout32"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout42">
 
@@ -240,8 +294,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout44"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="57.5dp"
+        android:layout_height="62.5dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintStart_toEndOf="@+id/frameLayout33"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout43">
 
