--- a/app/src/main/res/layout/fragment_tile.xml
+++ b/app/src/main/res/layout/fragment_tile.xml
@@ -4,26 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".TileFragment">
+    tools:context=".TileFragment"
+    android:id="@+id/frameLayout">
 
     <ImageView
         android:id="@+id/imageViewBackground"
-        android:layout_width="150px"
-        android:layout_height="150px"
-        android:src="@drawable/tile_background" />
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/tile_background"
+        tools:layout_conversion_absoluteHeight="57dp"
+        tools:layout_conversion_absoluteWidth="57dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/textViewNb"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="  2"
         android:textColor="#00963C"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textSize="50sp"
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="49dp"
+        tools:layout_conversion_absoluteWidth="39dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/imageViewForeground"
-        android:layout_width="150px"
-        android:layout_height="150px"
-        android:src="@drawable/tile_foreground" />
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/tile_foreground"
+        tools:layout_conversion_absoluteHeight="57dp"
+        tools:layout_conversion_absoluteWidth="57dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 </FrameLayout>
