--- a/app/src/main/res/layout/fragment_tile.xml
+++ b/app/src/main/res/layout/fragment_tile.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageViewBackground"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:clickable="false"
         android:src="@drawable/tile_background"
         tools:layout_conversion_absoluteHeight="57dp"
         tools:layout_conversion_absoluteWidth="57dp"
@@ -21,6 +22,7 @@
         android:id="@+id/textViewNb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="false"
         android:text="  2"
         android:textColor="#00963C"
         android:textSize="50sp"
