--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,30 @@
         tools:layout_editor_absoluteX="230dp"
         tools:layout_editor_absoluteY="250dp">
 
+        <Button
+            android:id="@+id/go"
+            android:layout_width="139dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="146dp"
+            android:layout_marginEnd="155dp"
+            android:layout_marginBottom="90dp"
+            android:text="Start Timer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/timer"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="94dp"
+            android:layout_marginEnd="96dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/go"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
