--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,313 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context=".MainActivity">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/MainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="250dp">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout30"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout20"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayoutSpacer2">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout42"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout31"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout41">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout12"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout02"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout11">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout23"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout12"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout22">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout32"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout22"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout31">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout02"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout01">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout22"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout11"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout21">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout14"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout04"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout13">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout00"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayoutSpacer"
-        android:layout_width="57.5dp"
-        android:layout_height="31.25dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout00"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout20"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayoutSpacer"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout10"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout00"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayoutSpacer">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout01"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout00">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout21"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout10"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout20">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout11"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout01"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout10">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayoutSpacer2"
-        android:layout_width="57.5dp"
-        android:layout_height="31.25dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout20"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout40"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayoutSpacer2"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout03"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout02">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout04"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout03">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout13"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout03"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout12">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout24"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout13"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout23">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout31"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout21"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout30">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout33"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout23"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout32">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout34"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout24"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout33">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout41"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout30"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout40">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout43"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout32"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout42">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayout44"
-        android:layout_width="57.5dp"
-        android:layout_height="62.5dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout33"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout43">
-
-    </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".MainActivity" />
