--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,18 @@
             app:layout_constraintHorizontal_bias="0.344"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TextView
+            android:id="@+id/TimeText"
+            android:layout_width="192dp"
+            android:layout_height="37dp"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/go"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Temps restant" />
+
         <ProgressBar
             android:id="@+id/timer"
             style="?android:attr/progressBarStyleHorizontal"
@@ -32,8 +44,8 @@
             android:layout_height="43dp"
             android:layout_marginStart="94dp"
             android:layout_marginEnd="96dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/TimeGroup"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/go"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
@@ -44,7 +56,7 @@
             android:layout_height="32dp"
             android:layout_marginStart="33dp"
             android:layout_marginEnd="33dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/go"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,28 +67,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="10 secondes" />
+                android:text="3 secondes" />
 
             <RadioButton
                 android:id="@+id/Time2"
-                android:layout_width="wrap_content"
+                android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="30 secondes" />
+                android:text="5 secondes" />
 
             <RadioButton
                 android:id="@+id/Time3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="60 secondes" />
+                android:text="8 secondes" />
         </RadioGroup>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/MainLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="1dp">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/MainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
