--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,6 @@
         android:id="@+id/UILayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <Button
-            android:id="@+id/go"
-            android:layout_width="139dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="146dp"
-            android:layout_marginEnd="155dp"
-            android:layout_marginBottom="24dp"
-            android:text="Start Timer"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.344"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/MainLayout"
@@ -55,7 +43,7 @@
             android:layout_marginEnd="33dp"
             android:layout_marginBottom="16dp"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/go"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -85,11 +73,10 @@
             android:id="@+id/TimeText"
             android:layout_width="152dp"
             android:layout_height="44dp"
-            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/go"
+            app:layout_constraintBottom_toBottomOf="@+id/timer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
