--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorRed">#F00</color>
+    <color name="colorGreen">#0F8</color>
     <color name="colorWhite">#FFF</color>
 
 </resources>
