--- a/app/src/main/res/layout/fragment_tile.xml
+++ b/app/src/main/res/layout/fragment_tile.xml
@@ -12,7 +12,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:clickable="false"
-        android:src="@drawable/tile_background"
+        android:src="@drawable/tile_background_violet"
         tools:layout_conversion_absoluteHeight="57dp"
         tools:layout_conversion_absoluteWidth="57dp"
         tools:layout_editor_absoluteX="0dp"
@@ -24,7 +24,7 @@
         android:layout_height="match_parent"
         android:clickable="false"
         android:text="  2"
-        android:textColor="#00963C"
+        android:textColor="#1A0061"
         android:textSize="50sp"
         android:textStyle="bold"
         tools:layout_conversion_absoluteHeight="49dp"
@@ -36,7 +36,7 @@
         android:id="@+id/imageViewForeground"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/tile_foreground"
+        android:src="@drawable/tile_foreground_violet"
         tools:layout_conversion_absoluteHeight="57dp"
         tools:layout_conversion_absoluteWidth="57dp"
         tools:layout_editor_absoluteX="0dp"
